# kaos-llm-client

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.cipr/: build.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  compat.yml  quality.yml  release.yml  security-full.yml  security-light.yml  security.yml  test.yml
docs/: EXAMPLES.md  QUICKSTART.md
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
kaos_llm_client/: __init__.py  __main__.py  cache.py  cassette.py  cli.py  cost.py  errors.py  json_utils.py  messages.py  multimodal.py  profiles.py  schema_cache.py  serve.py  settings.py  tools.py  transport.py  types.py
kaos_llm_client/providers/: __init__.py  _azure_auth.py  anthropic.py  azure_openai.py  azure_openai_responses.py  base.py  bedrock.py  concurrency.py  fallback.py  function.py  google.py  groq.py  instrumented.py  mistral.py  openai.py  openai_compat.py  openai_responses.py  openrouter.py  wrapper.py  xai.py
kaos_llm_client/tools/: __init__.py  _common.py  chat.py  cost_estimate.py  embed.py  provider_check.py  pydantic.py  structured.py  tool_call.py
tests/fixtures/: README.md
tests/integration/: conftest.py  test_azure_live.py  test_bedrock_live.py  test_cassette_live.py  test_live.py  test_provider_model_snapshot_live.py  test_vendor_egress_live.py
tests/unit/: test_anthropic.py  test_azure.py  test_azure_responses.py  test_base_coverage.py  test_bedrock.py  test_cache.py  test_cassette.py  test_cassette_permissions.py  test_cli.py  test_composition_coverage.py  test_concurrency.py  test_cost_observability.py  test_egress_logger.py  test_embeddings.py  test_errors.py  test_factory.py  test_fallback.py  test_function_client.py  test_google.py  test_google_coverage.py  test_groq.py  test_header_redaction.py  test_hooks_and_cache.py  test_instrumented.py  test_json_utils.py  test_kaos_llm_provider_policy_error_shape.py  test_logging_context.py  test_logging_structured.py  test_messages.py  test_mistral.py  test_multi_turn.py  test_multimodal.py  test_openai.py  test_openai_responses.py  test_openrouter.py  test_output_validation.py  test_pricing_registry_freshness.py  test_profiles.py  test_provider_baa_flags.py  test_provider_features.py  (+15 more)
